# smrec

./: CHANGELOG.md  Cargo.toml  Cross.toml  LICENCE  README.md  flake.nix  justfile  pre-build-win.ps1  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
docker/cross/: Dockerfile
scripts/: README.md  pre-build-linux.sh  pre-build-win.ps1
src/: config.rs  list.rs  main.rs  midi.rs  osc.rs  stream.rs  types.rs  wav.rs
src/midi/: parse.rs
