[package]
name = "smrec"
version = "0.1.4"
authors = ["alisomay <alisomay@runbox.com>"]
edition = "2021"
license = "MIT"
description = "Minimalist multi-track audio recorder which may be controlled via OSC or MIDI."
readme = "README.md"
homepage = "https://github.com/alisomay/smrec"
repository = "https://github.com/alisomay/smrec"
documentation = "https://docs.rs/smrec/0.1.4/smrec/#"
keywords = ["audio", "record", "midi", "osc", "cli"]
categories = ["multimedia"]
exclude = [
    "tests/*",
    "assets/favicon/*",
    "assets/logo_*"
]


# When https://github.com/RustAudio/cpal/issues/794 is resolved this can continue to track the stable release.
[target.'cfg(target_os = "windows")'.dependencies]
cpal = { git = "https://github.com/RustAudio/cpal.git", features = ["asio"] }
midir = { version = "0.9", features = ["winrt"] }

# [target.'cfg(target_os = "windows")'.dependencies]
# cpal = { version = "0.15", features = ["asio"] }
# midir = { version = "0.9", features = ["winrt"] }

[dependencies]
midir = "0.9"
clap = { version =  "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
crossbeam = "0.8"
rosc = "0.10"
hound = "3.4"
camino = "1"
toml = "0.8"
home = "0.5"
ctrlc = "3.1"
thiserror = "1.0"
glob-match = "0.2"
nom = "7"
# cpal = "0.15"
cpal = { git = "https://github.com/RustAudio/cpal.git" }
